--- a/style/ui/vars.less
+++ b/style/ui/vars.less
@@ -18,7 +18,7 @@
 @footer-size: 50px;
 
 @content-max-width: 970px;
-@content-horizontal-padding: 16px;
+@content-horizontal-padding: @grid-spacing;// 16px;
 
 @intro-padding-top: 300px;
 
